tests/snapshots/tui_commit_list__commit_list_ctrl_scroll_keeps_selection_visible.snap
---
source: tests/tui_commit_list.rs
expression: "harness.render(|frame| { views::commit_list::render(&mut app, frame); })"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 10 },
    content: [
        " SHA        Title                                           ",
        "│00000000   Commit number 2                                 ",
        "│00000000   Commit number 3                                 ",
        "│00000000   Commit number 4                                 ",
        "█00000000   Commit number 5                                 ",
        "█00000000   Commit number 6                                 ",
        "█00000000   Commit number 7                                 ",
        "█00000000   Commit number 8                                 ",
        "│00000000   Commit number 9                                 ",
        " 000000000006 6/12                       Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 9, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 27, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 41, y: 9, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 59, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
