tests/snapshots/tui_commit_list__commit_list_long_summary.snap
---
source: tests/tui_commit_list.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 12 },
    content: [
        "SHA        Title                                                                ",
        "abc123de   This is a very long commit summary that exceeds normal length        ",
        "def456gh   Short                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        " abc123def456 2/2                                             Press 'h' for help",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 72, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 62, y: 11, fg: White, bg: Blue, underline: Reset, modifier: DIM,
    ]
}
