tests/snapshots/tui_commit_list__commit_list_scrolls_early_within_the_margin.snap
---
source: tests/tui_commit_list.rs
assertion_line: 182
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 10 },
    content: [
        " SHA        Title                                           ",
        "│00000000   Commit number 3                                 ",
        "│00000000   Commit number 4                                 ",
        "█00000000   Commit number 5                                 ",
        "█00000000   Commit number 6                                 ",
        "│00000000   Commit number 7                                 ",
        "│00000000   Commit number 8                                 ",
        "│00000000   Commit number 9                                 ",
        "│00000000   Commit number 10                                ",
        " 000000000008 12/20                      Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 9, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 27, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 41, y: 9, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 59, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
