tests/snapshots/tui_commit_list__footer_hint_too_narrow.snap
---
source: tests/tui_commit_list.rs
expression: buffer
---
Buffer {
    area: Rect { x: 0, y: 0, width: 64, height: 5 },
    content: [
        "SHA        Title                                                ",
        "abc123de   A commit                                             ",
        "                                                                ",
        "                                                                ",
        " abc123def456abc123def456abc123def456abc1 1/1                   ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 19, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
